# agent-tutorials

./: .env.example  .gitignore  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
cores/: config.py  llms.py
llama_tutorial/: 03-load.py  04-chunk.py  05-index.py  06-vector.py  07-ragas.py  08-deepeval.py  agent.py  docling-tutorial.py  llm.py
tools/: constants.py  logs.py
