[project]
name = "agent-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langgraph>=1.2.9",
    "llama-index>=0.14.23",
    "llama-index-llms-openai>=0.7.9",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "structlog>=26.1.0",
]
