[project]
name = "agent-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "llama-index>=0.14.23",
    "llama-index-embeddings-siliconflow>=0.4.0",
    "llama-index-llms-anthropic>=0.11.8",
    "llama-index-llms-langchain>=0.8.0",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-llms-siliconflow>=0.5.0",
    "llama-index-vector-stores-milvus>=1.1.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "structlog>=26.1.0",
]
