[project]
name = "agent-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepeval>=2.6.6",
    "devtools>=0.12.2",
    "docling[all]>=2.113.0",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.1.9",
    "llama-index>=0.14.23",
    "llama-index-embeddings-clip>=0.6.0",
    "llama-index-embeddings-siliconflow>=0.4.0",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-llms-siliconflow>=0.5.0",
    "llama-index-node-parser-docling>=0.4.2",
    "llama-index-readers-docling>=0.4.2",
    "llama-index-readers-file>=0.6.0",
    "llama-index-retrievers-bm25>=0.7.1",
    "llama-index-vector-stores-milvus>=1.1.0",
    "marker-pdf>=1.5.5",
    "openinference-instrumentation-llama-index>=4.4.3",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "ragas>=0.2.0",
    "structlog>=26.1.0",
]
